out/report.txt
==============================================
Report generated on 04/06/2021 21:06:39
==============================================
Failed to compile file, could not run any tests
==============================================
HelloWorld.java:7: error: ';' expected
        System.out.println("Hello, World!")
                                           ^
1 error
==============================================
Report ended on 04/06/2021 21:06:40
==============================================
